# momonala.github.io

./: .gitignore  README.md  index.html  pre-commit.sh  pyproject.toml
.cursor/rules/architecture-planning/: RULE.md
.cursor/rules/python-basics/: RULE.md
.cursor/rules/webdev/: RULE.md
application-docs/: notes-coverletter.txt  notes-cv.txt  notes-job-details-long.txt  notes-study-guide.md
biobots_project/: README.md  server.py  stat_analysis.ipynb
biobots_project/otherfiles/: boxplot_ex.html  test_csv.py  testing.ipynb  userpage.html
biobots_project/static/: graph.js
biobots_project/templates/: homepage.html  usergraph.html
css/: resume.css  resume.min.css
js/: resume.js
